--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
 
-      <div class="ui large inverted pointing menu fixed secondary" style="padding:10px;" dir="rtl">
+      <div class="ui large inverted pointing menu fixed secondary" style="padding:10px; border: 0px;" dir="rtl">
           <div class="ui container">
               <div class="right item ">
                   <a class="item mobile-button"> <i class="content icon"></i> </a>
