--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
 
-    <div id="nav" class="ui large inverted pointing menu fixed secondary" dir="rtl">
+    <div id="nav" class="ui large inverted pointing menu fixed secondary" dir="rtl" style="border-bottom: 0px;">
         <div class="ui container">
             <div class="right item ">
                 <a class="item mobile-button"> <i class="content icon"></i> </a>
