--- a/index.html
+++ b/index.html
@@ -34,40 +34,13 @@
 
     <style>
 @font-face {
-    font-family: 'Open Sans';
-    src: url('/static/fonts/open-sans/OpenSans-Bold-webfont.eot');
-    src: url('/static/fonts/open-sans/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/static/fonts/open-sans/OpenSans-Bold-webfont.woff') format('woff'),
-         url('/static/fonts/open-sans/OpenSans-Bold-webfont.ttf') format('truetype'),
-         url('/static/fonts/open-sans/OpenSans-Bold-webfont.svg#open_sansbold') format('svg');
-    font-weight: 700;
-    font-style: normal;
-
+    font-family: 'IRANSans';
+    src: url('/static/fonts/IRANSansWeb.woff2') format('woff2');
 }
-@font-face {
-    font-family: 'Open Sans';
-    src: url('/static/fonts/open-sans/OpenSans-Semibold-webfont.eot');
-    src: url('/static/fonts/open-sans/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/static/fonts/open-sans/OpenSans-Semibold-webfont.woff') format('woff'),
-         url('/static/fonts/open-sans/OpenSans-Semibold-webfont.ttf') format('truetype'),
-         url('/static/fonts/open-sans/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
-    font-weight: 600;
-    font-style: normal;
 
-}
-@font-face {
-    font-family: 'Open Sans';
-    src: url('/static/fonts/open-sans/OpenSans-Regular-webfont.eot');
-    src: url('/static/fonts/open-sans/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/static/fonts/open-sans/OpenSans-Regular-webfont.woff') format('woff'),
-         url('/static/fonts/open-sans/OpenSans-Regular-webfont.ttf') format('truetype'),
-         url('/static/fonts/open-sans/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
 
-}
-.ui .ui .ui p{
-    font-family: 'Open Sans' !important
+p, a, h1, h2, h3, h4, h5, h6{
+    font-family: 'IRANSans';
 }
     </style>
 </head>
