--- a/index.html
+++ b/index.html
@@ -32,52 +32,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.js"></script>
 
-    <style>
-@font-face {
-    font-family: 'IRANSans';
-    src: url('/static/fonts/IRANSansWeb.woff2') format('woff2');
-}
-
-
-p, a, label, h1, h2, h3, h4, h5, h6{
-    font-family: 'IRANSans';
-}
-p {
-    font-size: 90%;
-}
-    </style>
 </head>
 
 <body>
-    <div class="ui right sidebar inverted vertical menu" id="right-menu">
-        <a class="item">
-            1
-        </a>
-        <a class="item">
-            2
-        </a>
-        <a class="item">
-            3
-        </a>
-    </div>
 
+    <div id="rightsidebarcomponent"></div>
 
-    <div id="nav" class="ui large inverted pointing menu fixed secondary" dir="rtl" style="border-bottom: 0px;">
-        <div class="ui container">
-            <div class="right item ">
-                <a class="item mobile-button"> <i class="content icon"></i> </a>
-                <a class="item">تست</a>
-                <a class="item">گروهک</a>
-            </div>
-        </div>
-    </div>
+    <div id="navcomponent"></div>
 
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
-    <script>
 
-        
-    </script>
+    <script src="/dist/build.js"></script>
+
 </body>
 
 </html>
